test/Fail/Issue2365a.err
Issue2365a.agda:6,5-8: error: [GenericError]
Negative literals are not supported in patterns
when checking that the pattern -20 has type Nat
